# openvoice-v2-ttnn

./: OPTIMIZATIONS.md  README.md  ops.py  pyproject.toml  setup_and_run.sh  test_optimizations.py  verify_pipeline.py
src/: __init__.py  conv1d_optimized.py  duration_predictor_optimized.py  generator.py  gru_optimized.py  reference_encoder_optimized.py
