[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tt_openvoice_optimized"
version = "0.1.0"
description = "Optimized OpenVoice V2 for Tenstorrent TTNN"
dependencies = [
    "torch",
    "librosa",
    "transformers",
    "sentencepiece",
    "huggingface_hub"
]

[tool.setuptools.package-dir]
"" = "."
